snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
7a0376b24aeda3b6d039cb49750d712ea63ff60a